Bug 1999100 - Don't clip overflow by default on replaced images. r=jwatt
This implements overflow-clip-box: <visual-box>, and uses it to allow
overflow on replaced elements.

Differential Revision: https://phabricator.services.mozilla.com/D274759

UltraBlame original commit: 0b62ae6eb4a155248ffb670d771c97607db83d07

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -638,6 +638,12 @@ findbar {
   contain: inline-size;
 }
 
+/* Matches legacy behavior and <html:img> */
+image {
+  overflow-clip-margin: content-box;
+  overflow: clip;
+}
+
 /* Some elements that in HTML blocks should be inline-level by default */
 button,
 image {
